name:                complexity-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/esjmb/use-cloudhaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Barrett
maintainer:          Stephen.Barrett@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , PrimeFactors
                     , ArgonWork
  build-depends:       base >= 4.7 && < 5
                     , network-transport-tcp
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , process
                     , filepath
                     , split
                     , directory
  default-language:    Haskell2010

executable             complexity-api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , complexity-api
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , network-transport-tcp
                     , filepath
                     , directory
                     , process
                     , split
                     , time
  default-language:    Haskell2010
